--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Canaan Info Tech</h1>
+    <h6>canaan charitable trust</h6>
     <img width="200px" src="CANAAN.png" alt="">
     <p>Health Insurance claiming form</p>
     <p>work from home jobs</p>
